refactor: added invoice payment
